initial smart_traffic_lights.ipynb

--- a/smart_traffic_lights.ipynb
+++ b/smart_traffic_lights.ipynb
@@ -11,7 +11,7 @@
       "source": [
         "import math\n",
         "\n",
-        "# Basic Function\n",
+        "# Basic Functions\n",
         "def gimmelight(road1, road2, road3, road4):\n",
         "  min_cycle_duration = 60  # Minimum cycle duration in seconds\n",
         "  max_cycle_duration = 240  # Maximum cycle duration in seconds\n",
